@@ -34,7 +34,6 @@ LOW PRIORITY
 - convert BatteryCapacitorCircuit to Property<T>, pre-computing all model values?
 - only update things that are visible, do this in the model wherever possible by observing visibleProperty
 - add meter body bounds to model so we can keep entire meter body constrained to world bounds when dragging
-- clean up CCKStrategyWithRounding
 - gradient paint on plate top surfaces (not on edges)
 - use of Polarity enum is a little incorrect, it's not really polarity
 - remove unused model code?
